--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Make sure data-text equals the text you put inside the tags. -->
 		<h1 class="glitch" data-text="
 Let's go home">Let's go home</h1>
-		<span class="sub">EFFECT</span>
+		<span class="sub">done for the day!</span>
 	</div>
 </div>
 </div>
